--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Destaques Naturais</h2>
             <div class="cards-container">
                 <div class="card">
-                    <div class="card-image"><img src="https://www.elissalles.com.br/imagens/cachoeiras-paranapanema.jpg" alt=""></div>
+                    <div class="card-image"><img   class="card-image" hjsrc="https://www.elissalles.com.br/imagens/cachoeiras-paranapanema.jpg" alt=""></div>
                     <h3>Cachoeira do Capão Bonito</h3>
                     <p>Queda d'água impressionante em meio à mata nativa, perfeita para banho e contemplação.</p>
                 </div>
