--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <h2>Destaques Naturais</h2>
             <div class="cards-container">
                 <div class="card">
-                    <div class="card-image"><img  class="card-image" src="https://www.elissalles.com.br/imagens/cachoeiras-paranapanema.jpg" alt=""></div>
+                    <div class="card-image""c><img  class=ard-image" src="https://www.elissalles.com.br/imagens/cachoeiras-paranapanema.jpg" alt=""></div>
                     <h3>Cachoeira do Capão Bonito</h3>
                     <p>Queda d'água impressionante em meio à mata nativa, perfeita para banho e contemplação.</p>
                 </div>
                 <div class="card">
-                    <div class="card-image">[Imagem de um trecho do Rio Jaguariaíva]</div>
+                    <div class="card-image""c><img  class=ard-image" src="https://c2.staticflickr.com/2/1948/44475152805_ca333d4988_b.jpg" alt="
                     <h3>Rio Jaguariaíva</h3>
                     <p>Ideal para canoagem e observação de fauna local. Um corredor de vida na região.</p>
                 </div>
